@@ -1,5 +1,5 @@
 /*
- * "$Id: usb.c,v 1.18.2.12 2002/08/09 00:08:49 mike Exp $"
+ * "$Id: usb.c,v 1.18.2.13 2002/08/09 00:20:07 mike Exp $"
  *
  *   USB port backend for the Common UNIX Printing System (CUPS).
  *
@@ -427,6 +427,16 @@ list_devices(void)
   }
 #elif defined(__sgi)
 #elif defined(__sun)
+  int   i;                      /* Looping var */
+  char  device[255];            /* Device filename */
+
+
+  for (i = 0; i < 8; i ++)
+  {
+    sprintf(device, "/dev/usb/printer%d", i);
+    if (!access(device, 0))
+      printf("direct usb:%s \"Unknown\" \"USB Printer #%d\"\n", device, i + 1);
+  }
 #elif defined(__hpux)
 #elif defined(__osf)
 #elif defined(__FreeBSD__) || defined(__NetBSD__) || defined(__OpenBSD__)
@@ -438,16 +448,16 @@ list_devices(void)
   {
     sprintf(device, "/dev/ulpt%d", i);
     if (!access(device, 0))
-      printf("direct usb:%s \"Unknown\" \"USB Printer #%d (ulpt)\"\n", device, i + 1);
+      printf("direct usb:%s \"Unknown\" \"USB Printer #%d\"\n", device, i + 1);
 
     sprintf(device, "/dev/unlpt%d", i);
     if (!access(device, 0))
-      printf("direct usb:%s \"Unknown\" \"USB Printer #%d\" (unlpt)\n", device, i + 1);
+      printf("direct usb:%s \"Unknown\" \"USB Printer #%d\" (no reset)\n", device, i + 1);
   }
 #endif
 }
 
 
 /*
- * End of "$Id: usb.c,v 1.18.2.12 2002/08/09 00:08:49 mike Exp $".
+ * End of "$Id: usb.c,v 1.18.2.13 2002/08/09 00:20:07 mike Exp $".
  */
